# TeshTransTrackingMoveTrains

./: README.md
TeshTransTrackingMoveTrains-cpp/: CMakeLists.txt  Dockerfile  README.md
TeshTransTrackingMoveTrains-cpp/include/utils/: ops.h
TeshTransTrackingMoveTrains-cpp/src/: main.cpp
TeshTransTrackingMoveTrains-cpp/src/nn/: autobackend.cpp
TeshTransTrackingMoveTrains-cpp/src/utils/: ops.cpp
TeshTransTrackingMoveTrains-python/: .dockerignore  Dockerfile  README.md  exportmodel.py  main2.py  requirements.txt
